--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "gatsby-plugin-sharp": "^2.3.7",
     "gatsby-plugin-sitemap": "^2.2.24",
     "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-emojis": "^0.4.2",
     "gatsby-remark-images": "^3.1.37",
+    "gatsby-remark-mermaid": "^1.2.0",
     "gatsby-source-filesystem": "^2.1.42",
-    "gatsby-transformer-remark": "^2.6.42",
+    "gatsby-transformer-remark": "^2.6.45",
     "graphql": "^14.5.8",
     "is-absolute-url": "^3.0.3",
     "lodash.flatten": "^4.4.0",
